# auto-air-filter-upgrade

./: flake.nix
.github/workflows/: control.yml  firmware.yml
control/: Cargo.toml  build.rs  config.toml
control/src/: air_filter.rs  app_config.rs  main.rs
control/src/sensor/: air_quality.rs  mod.rs  presence.rs
control/src/zone/: control_logic.rs  mod.rs
firmware/: Cargo.toml  build.rs
firmware/configs/: north-basement-workshop.toml  south-basement-workshop.toml  test.toml
firmware/src/: fan.rs  main.rs  run_logic.rs  temperature_sensors.rs  wifi.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
