[package]
name = "auto-air-filter-firmware"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2021"
license = "MIT"

[features]
panic-probe = ["dep:panic-probe"]

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embassy-rp = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
assign-resources = "0.4.1"

# Wifi
cyw43 = { version = "0.2.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.2.0", features = ["defmt"] }
embassy-net = { version = "0.5.0", features = ["defmt", "dhcpv4", "dns", "proto-ipv4", "tcp", "udp"] }
rand = { version = "0.8.5", default-features = false }

embassy-executor = { version = "0.6.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = "0.3.2"
embassy-time-queue-driver = "0.1.0"
embassy-futures = "0.1.1"

embedded-hal = { package = "embedded-hal", version = "1.0.0" }
embedded-hal-p2 = { package = "embedded-hal", version = "0.2.0" }
embedded-io-async = "0.6.1"

defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"], optional = true }

embassy-sync = "0.6.0"
portable-atomic = { version = "1.9.0", features = ["critical-section"] }
static_cell = "2.1.0"

heapless = { version = "0.8.0", features = ["defmt-03"] }

# Temperature sensors
one-wire-bus = "0.1.1"
ds18b20 = "0.1.1"

git-version = "0.3.9"

# MQTT
rust-mqtt = { git = "https://github.com/DanNixon/rust-mqtt", default-features = false, features = ["defmt"] }
serde = { version = "1.0.215", features = ["derive"], default-features = false }
serde-json-core = { version = "0.6.0", features = ["defmt"] }

[build-dependencies]
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
